--- a/_css/style.css
+++ b/_css/style.css
@@ -70,8 +70,27 @@ body {
   transition: all 0.3s ease-in;
 }
 
+.header-half {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 80vh;
+  margin-left: 50px;
+}
+
+.button {
+  margin-left: 130px;
+  margin-top: 30px;
+  border: 2px solid  #01BFA5;
+  border-radius: 4px;
+  color: #fff;
+  background-color:  #01BFA5;
+  padding: 10px;
+}
+
 .header-div-2 {
   background-color: lightgreen;
   width: 40%;
   height: 100vh;
+  background: url(../_img/demo.jpg);
 }
